NIHVIVO-1867: Fixed the overlaps of the Submit button with the  gray box showing selected author on author form

--- a/productMods/edit/forms/css/customForm.css
+++ b/productMods/edit/forms/css/customForm.css
@@ -113,6 +113,9 @@ form.customForm a.close:visited {
 form.customForm textarea {
     width: 30%;
 }
+div.acSelection{
+    margin-bottom: 15px;
+}
 
 /* fix bad alignment in IE 6 and 7 
 .or, .cancel{
